# src/routes/publicAPI/publicApiRoutes.js
@@ -1,4 +1,9 @@
 const express = require('express');
 const router = express.Router();
+const { getAllDataComplaints, insertDataComplaint, removeDataComplaint } = require('../../controllers/publicAPI/complaintController');
+
+router.get('/getComplaints', getAllDataComplaints);
+router.post('/insertComplaint', insertDataComplaint);
+router.delete('/removeComplaint/:id', removeDataComplaint);
 
 module.exports = router;
