# src/swagger.json
@@ -19,10 +19,14 @@
     {
       "name": "ComplaintTopic",
       "description": "Endpoints สำหรับการจัดการข้อมูลของหัวข้อเรื่องร้องเรียน"
+    },
+    {
+      "name": "Complaint",
+      "description": "Endpoints สำหรับการจัดการข้อมูลเรื่องร้องเรียน"
     }
   ],
   "paths": {
-    "akatApi/setting/getComplaintTopics": {
+    "/akatApi/setting/getComplaintTopics": {
       "get": {
         "tags": [
           "ComplaintTopic"
@@ -111,7 +115,7 @@
         }
       }
     },
-    "akatApi/setting/insertComplaintTopics": {
+    "/akatApi/setting/insertComplaintTopics": {
       "post": {
         "tags": [
           "ComplaintTopic"
@@ -215,7 +219,7 @@
         }
       }
     },
-    "akatApi/setting/updateComplaintTopics/{id}": {
+    "/akatApi/setting/updateComplaintTopics/{id}": {
       "put": {
         "tags": [
           "ComplaintTopic"
@@ -301,6 +305,390 @@
                     "message": {
                       "type": "string",
                       "example": "มี (complaint_topic_name) อยู่ในระบบแล้ว ไม่อนุญาตให้บันทึกข้อมูลซ้ำ!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "ข้อผิดพลาดเซิร์ฟเวอร์",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "internal server errors"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/akatApi/setting/removeComplaintTopics/{id}": {
+      "delete": {
+        "tags": [
+          "ComplaintTopic"
+        ],
+        "summary": "สำหรับลบข้อมูล ComplaintTopic",
+        "description": "สำหรับลบข้อมูลทั้งหมดของ ComplaintTopic",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "example": 1
+            },
+            "description": "ID ของ ComplaintTopic ที่ต้องการลบ"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {}
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "ความสำเร็จทั่วไป",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Deleted successfully!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Resource ไม่พบ",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "ไม่มี complaint_topic_id อยู่ในระบบ!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "ข้อผิดพลาดเซิร์ฟเวอร์",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "internal server errors"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/akatApi/publicAPI/getComplaints": {
+      "get": {
+        "tags": [
+          "Complaint"
+        ],
+        "summary": "สำหรับดึงข้อมูล Complaint",
+        "description": "สำหรับดึงข้อมูลทั้งหมดของ Complaint",
+        "responses": {
+          "200": {
+            "description": "ความสำเร็จทั่วไป",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "complaint_id": {
+                            "type": "integer",
+                            "example": 1
+                          },
+                          "fullname": {
+                            "type": "string",
+                            "example": "นายร้องเรียน อยากร้องเรียน"
+                          },
+                          "email": {
+                            "type": "string",
+                            "example": "nailonglint@gmail.com"
+                          },
+                          "telephone_number": {
+                            "type": "string",
+                            "example": "0123456789876"
+                          },
+                          "complaint_topics": {
+                            "type": "object",
+                            "properties": {
+                              "complaint_topic_id": {
+                                "type": "int",
+                                "example": "1"
+                              },
+                              "complaint_topic_name": {
+                                "type": "string",
+                                "example": "ร้องเรียนเจ้าหน้าที่"
+                              },
+                              "created_at": {
+                                "type": "string",
+                                "format": "date-time",
+                                "example": "2025-02-19T08:55:57.000Z"
+                              },
+                              "created_by": {
+                                "type": "string",
+                                "example": "admin"
+                              },
+                              "updated_at": {
+                                "type": "string",
+                                "format": "date-time",
+                                "example": "2025-02-19T08:55:57.000Z"
+                              },
+                              "updated_by": {
+                                "type": "string",
+                                "example": "admin"
+                              }
+                            }
+                          },
+                          "detail": {
+                            "type": "string",
+                            "example": "อยากร้องเรียนเพราะอะไรไม่รู้เหมือนกัน"
+                          },
+                          "created_at": {
+                            "type": "string",
+                            "format": "date-time",
+                            "example": "2025-02-19T08:55:57.000Z"
+                          },
+                          "created_by": {
+                            "type": "string",
+                            "example": "admin"
+                          },
+                          "updated_at": {
+                            "type": "string",
+                            "format": "date-time",
+                            "example": "2025-02-19T08:55:57.000Z"
+                          },
+                          "updated_by": {
+                            "type": "string",
+                            "example": "admin"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Resource ไม่พบ",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "ไม่มีข้อมูลบน Database!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "ข้อผิดพลาดเซิร์ฟเวอร์",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "internal server errors"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/akatApi/setting/insertComplaint": {
+      "post": {
+        "tags": [
+          "Complaint"
+        ],
+        "summary": "สำหรับบันทึกข้อมูล Complaint",
+        "description": "สำหรับบันทึกข้อมูลทั้งหมดของ Complaint",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "fullname": {
+                    "type": "string",
+                    "example": "นายดำ ค้ำเครียด"
+                  },
+                  "email": {
+                    "type": "string",
+                    "example": "admin@gmail.com"
+                  },
+                  "telephone_number": {
+                    "type": "string",
+                    "example": "0999739572"
+                  },
+                  "complaint_topic_id": {
+                    "type": "int",
+                    "example": "1"
+                  },
+                  "detail": {
+                    "type": "string",
+                    "example": "อยากร้องเรียนเฉยๆมีไรป๊ะ!!"
+                  }
+                },
+                "required": [
+                  "fullname",
+                  "email",
+                  "telephone_number",
+                  "complaint_topic_id",
+                  "detail"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "ความสำเร็จทั่วไป",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Insert data successfully!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "ข้อมูลจาก Client ไม่ถูกต้อง",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "กรุณากรอกข้อมูลให้ครบถ้วน || รูปแบบ Email ไม่ถูกต้องกรุณาตรวจสอบ! || รูปแบบเบอร์โทรศัพท์ไม่ถูกต้องกรุณาตรวจสอบ!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "ข้อผิดพลาดเซิร์ฟเวอร์",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "internal server errors"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/akatApi/setting/removeComplaint/{id}": {
+      "delete": {
+        "tags": [
+          "Complaint"
+        ],
+        "summary": "สำหรับลบข้อมูล Complaint",
+        "description": "สำหรับลบข้อมูลทั้งหมดของ Complaint",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "example": 1
+            },
+            "description": "ID ของ Complaint ที่ต้องการลบ"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {}
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "ความสำเร็จทั่วไป",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Deleted successfully!"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Resource ไม่พบ",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "ไม่มี complaint_id อยู่ในระบบ!"
                     }
                   }
                 }
